src/objects/Weekly_Report__c.object
<CustomObject>
    <description>This will store weekly report information like function or week ending date. All weekly report items will reference to one of the record from this object. There will always be one record created for each function per week.</description>
    <fields>
        <fullName>Drawloop_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For massloop functionality</description>
        <label>Drawloop Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Weekly Reports</relationshipLabel>
        <relationshipName>Weekly_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Function__c</fullName>
        <label>Function</label>
        <picklist>
            <picklistValues>
                <fullName>GTM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biz Ops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Week_Ending__c</fullName>
        <label>Week Ending</label>
        <type>Date</type>
    </fields>
    <label>Weekly Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Function__c</columns>
        <columns>Week_Ending__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Null_Week_End</fullName>
        <columns>NAME</columns>
        <columns>Week_Ending__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Function__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Week_Ending__c</field>
            <operation>equals</operation>
        </filters>
        <label>Null Week End</label>
    </listViews>
    <nameField>
        <label>Weekly Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>